--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="seven">777</string>
     <string name="fluids">Fluids</string>
     <string name="filters">Filters</string>
+    <string name="other_expenses">Other expenses</string>
 </resources>
